# Smart-Pears

./: README.md  pyproject.toml
.github/workflows/: linting.yml  pypi-publish.yml
smart_pears/: main.py
